css/styles.css
/* ... */
figcaption strong {
    padding-bottom: 0;
    font-style: italic;
}
figcaption {
    color: white;
}
/* MAIN PAGE, gallery small */

.gallery_small {
    float: left;
    width: 20%;
    padding-bottom: 50px;
    padding-top: 50px;
    padding-left: 30px;
}

.gallery_small2 {
    float: left;
    width: 27%;
    padding-bottom: 50px;
    padding-top: 50px;
    padding-left: 25px;
}

/* MAIN PAGE, quote */
div h2 em {
    color:  rgb(255,250,250);          /* white */
}

.quotes {
    font-size:200px;
    color:  rgb(255,250,250);          /* white */
    line-height:1;
}

.center_column {
    text-align: center;
}

/* MAIN PAGE, know how */
.two_images {
    width: 50% !important;
    padding-bottom: 50px !important;
    padding-top: 50px !important;
    float: left !important;
    padding-left:15px !important;
}

.two_images_insta {
    padding-bottom: 50px !important;
    padding-top: 50px !important;
    float: left !important;
    padding-left:15px !important;
    max-width:50%;
}

.two_images_kh {
    width: 50%;
    padding-bottom: 50px !important;
    padding-top: 50px !important;
    float: left !important;
    padding-left:15px !important;
    height:500px;
}

.two_images_kh > img {
    max-width: 450px !important;
    max-height:244px !important;
}

/* MAIN PAGE, #derpolsterer */

.four_images {
    width: 24%;
    padding-left:5px;
    padding-bottom: 50px;
    float: left;
    height:400px;
}

.four_images_shop {
    width: 25%;
    margin-bottom: 50px;
    float: left;
    height: 600px;
    padding-left:50px;
    max-width:275px;   
}

.four_images_pt {
    width: 25%;
    padding-left:5px;
    padding-bottom: 0px;
    float: left;
    height:550px;
}

.four_images_shop_s {
    width: 25%;
    margin-bottom: 50px;
    float: left;
    height: 500px;
    padding-left:50px;
    max-width:275px;
}

.col-sm-12 {
    padding-left:0;
    padding-right:0;
}

.col-sm-8 > .four_images_shop > iframe {
    height: 500px !important;
    line-height:500px!important;
    vertical-align:middle;
}

.col-sm-8 > .four_images_shop_s > iframe {
    height: 500px !important;
    line-height:500px!important;
    vertical-align:middle;
}

.seven_images {
    width: 14%;
    padding-bottom: 50px;
    padding-top: 50px;
    float: left;
}

.image_row {
    padding:20px;
    margin-bottom: 10px;
}

/* Google Map */

.mapouter{
    position:relative;
    height:500px;
    width:600px;
    margin: 0 auto;

}

.gmap_canvas {
    overflow:hidden;
    height:500px;
    width:600px;
}

/* timeline */

* {
    box-sizing: border-box;
}

/* The actual timeline (the vertical ruler) */
.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
    margin-top: 20px;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
    content: '';
    position: absolute;
    width: 4px;
    background-color: white; /*rgb(40,90,40);  green */
    top: 25px;
    bottom: 15px;
    left: 31%;
    margin-left: -3px;
}

/* Container around content */
.container[data-descr] {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
}

/* The squares on the timeline with the years */
.container[data-descr]::after {
    content: attr(data-descr);
    position: absolute;
    font-size: 20px;
    color: rgb(40,90,40);  /* green */
    font-weight:bold;
    width: 25px;
    height: 25px;
    right: -17px;
    padding: 5px 15px 5px 15px;
    background-color: white;
    border: 4px solid rgb(40,90,40);
    top: 15px;
    z-index: 1;
}

/* Place the container to the right */

.right {
    left: 30px;
}

/* Fix the circle for containers on the right side */

.right::after {
    left: -16px;
}

/* The actual content */

.content {
    padding: 20px;
    background-color:     rgb(246,246,246);
    position: relative;
    border-radius: 6px;
    text-align: left;
    margin-left: 20px;
}

ul li.listing {
    padding-bottom:10px;
    font-size:16px;
}
ul  {
    font-style: italic;
}
p {
    font-size: 16px;
    line-height: 20px;
    font-style: italic;
    color: white;
}

/* Image gallery used as lightbox (modal) */

.column:after {
  content: "";
  display: table;
  clear: both;
}


/* The Modal (background) */
.modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: black;
}

/* Modal Content */
.modal-content {
  position: relative;
  background-color: #fefefe;
  margin: auto;
  padding: 0;
  width: 90%;
  max-width: 1200px;
}

/* The Close Button */
.close {
  color: white!important;
  position: absolute;
  top: 150px;
  right: 25px;
  font-size: 35px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #999;
  text-decoration: none;
  cursor: pointer;
}

/* Hide the slides by default */
.mySlides {
    display: none;
}

.mySlides > img {
    max-width:1200px;
    max-height:640px;
    object-fit: contain;
    background:black;
    padding-top:50px;
}

.mySlides2 > img {
    max-width:1200px;
    max-height:640px;
    object-fit: contain;
    background:black;
    padding-top:50px;
}

/* Hide the slides by default */
.mySlides2 {
  display: none;
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -50px;
  color: white;
  font-weight: bold;
  font-size: 20px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
  -webkit-user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

.prev {
  left: 0;
  border-radius: 0 0 3px 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  background-color: rgba(0, 0, 0, 0.8);
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}
/* ... */

